# MATH0031-financial-mathematics

./: README.md  hello.py  notebook.ipynb  pyproject.toml
.cursor/rules/: marimo.mdc
marimo-notebooks/: de-moivre-laplace.py  test.py
