[project]
name = "brownian-motion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "marimo>=0.13.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
